For the latest news, visit the SparForte web site.

SparForte 2.0.4's focus was bug fixes for SparForte 2.0

CHANGES SINCE 2.0.3

1. Fix: backquoted strings cannot be used as a Bourne shell command.

2. Fix: type error when using env; to show all parameters, resulting from new parameterized generic type handling error, has been fixed.

3. Refactor: help command split out from builtins package.

4. Refactor: new report system created, built-in help topics converted to use it.

5. Change: pragma deprecated/depreciated is now an error when running in design phase mode, but remains a warning otherwise.

6. Fix: spar -e with an empty string now produces an appropriate error message instead of "empty script name".

7: Fix: a file or spar -e string with only whitespace is now an error.

8: Fix: "hash clash" internal error message corrected, typically on shell exit.

9. Fix: dbm online help fixed.

10. Fix: strings.match online help no longer "help match" but "help strings.match" as in the index page.

11. Fix: set_input added to the help index.
